--- a/author-access.html
+++ b/author-access.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" type="image/svg+xml" href="favicon.svg"><title>Manage Your Papers - AI-Theoretical</title><style>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" type="image/svg+xml" href="favicon.svg"><title>Author Access - AI-Theoretical</title><style>
 body { font-family: system-ui, -apple-system, sans-serif; margin: 0; padding: 20px; background: #fafafa; }
 .container { max-width: 900px; margin: 0 auto; background: white; padding: 40px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
 h1 { color: #333; margin-bottom: 20px; }
@@ -10,7 +10,7 @@ nav { margin-bottom: 30px; }
 .intro { font-size: 1.1em; color: #666; margin-bottom: 30px; }
 .track-card { background: #f8f9fa; padding: 20px; margin: 15px 0; border-radius: 8px; border-left: 4px solid #2196F3; }
 .track-card h3 { margin-top: 0; color: #333; }
-</style></head><body><div class="container"><nav><a href="/">← Back to Home</a></nav><h1>Manage Your Papers</h1>
+</style></head><body><div class="container"><nav><a href="/">← Back to Home</a></nav><h1>Author Access</h1>
 <div class="intro">
     <p>To withdraw a paper or submit a new version, enter your email address below. 
     We will send you a secure link to manage your published papers.</p>
@@ -55,7 +55,7 @@ document.getElementById("updateForm").addEventListener("submit", async function(
     msg.style.display = "none";
     
     try {
-        const response = await fetch("https://ai-theoretical.org/api/update-request", {
+        const response = await fetch("https://ai-theoretical.org/api/author-access/request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: email })
@@ -66,7 +66,7 @@ document.getElementById("updateForm").addEventListener("submit", async function(
         msg.style.display = "block";
         if (data.success) {
             msg.className = "message success";
-            msg.innerHTML = "<strong>Check your email!</strong><br>We have sent a secure link to <strong>" + email + "</strong>. The link expires in 24 hours.";
+            msg.innerHTML = "<strong>Check your email!</strong><br>If you have published papers with this address, we have sent a secure link to <strong>" + email + "</strong>. The link expires in 24 hours.";
             document.getElementById("updateForm").reset();
         } else {
             msg.className = "message error";
