--- a/papers/the-invisible-pillar-on-the.html
+++ b/papers/the-invisible-pillar-on-the.html
@@ -7,12 +7,53 @@
 <title>The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical</title>
 <meta name="description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
+<meta name="citation_title" content="The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns">
+<meta name="citation_author" content="Franco Cazzaniga">
+<meta name="citation_pdf_url" content="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.pdf">
+<meta name="citation_abstract_html_url" content="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
+<meta name="citation_publisher" content="AI-Theoretical">
 <meta property="og:title" content="The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns — AI-Theoretical">
 <meta property="og:description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
 <meta property="og:url" content="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@AITheoretical">
+<meta name="twitter:title" content="The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns">
+<meta name="twitter:description" content="This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Plat...">
+<meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html">
+<script type="application/ld+json">
+{
+	"@type" : "ScholarlyArticle",
+	"name" : "The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns",
+	"url" : "https://ai-theoretical.org/papers/the-invisible-pillar-on-the.html",
+	"publisher" : {
+		"name" : "AI-Theoretical",
+		"@type" : "Organization",
+		"url" : "https://ai-theoretical.org"
+	},
+	"abstract" : "This paper traces the genealogy of the dualism between intelligible and sensible, between logos and matter, from its pre-Socratic background through its Platonic inauguration to its modern transformations. \r\nThe central thesis is that Plato introduced a structural division that subsequent philosophy inherited, criticised superficially, re-articulated, but rarely questioned as a framework. The paper examines how this dualism was first epistemic and social (Plato’s distinction between philosophical knowledge and common experience), then cosmological (the scientific revolution’s separation between the mathematically describable real and the qualitatively perceived apparent), and finally metaphysical (Descartes’ res cogitans and res extensa).\r\nThe natural philosophers of the sixteenth and seventeenth centuries—Copernicus, Kepler, Galileo, Newton—are treated here as what they were: philosophers investigating nature, whose work deepened and transformed the Platonic distance between the true and the accessible. The aim is not to refute dualism but to make it visible as a historical structure, a framework that has become so assimilated as to be invisible.",
+	"encoding" : {
+		"contentUrl" : "https://ai-theoretical.org/papers/the-invisible-pillar-on-the.pdf",
+		"@type" : "MediaObject",
+		"encodingFormat" : "application/pdf"
+	},
+	"genre" : "workingPaper",
+	"funder" : {
+		"name" : "AI Models: Claude Opus 4.5",
+		"@type" : "Organization"
+	},
+	"headline" : "The Invisible Pillar On the Genesis and Concealment of Dualism from the Pre-Socratics to the Moderns",
+	"author" : [
+		{
+			"name" : "Franco Cazzaniga",
+			"@type" : "Person"
+		}
+	],
+	"@context" : "https://schema.org",
+	"datePublished" : ""
+}</script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
 </head>
