--- a/papers/wave-function-collapse-as-lie.html
+++ b/papers/wave-function-collapse-as-lie.html
@@ -7,12 +7,53 @@
 <title>Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical</title>
 <meta name="description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction ...">
 <meta name="keywords" content="AI, theoretical papers, human-AI collaboration, Franco Cazzaniga (Università dell'Insubria)">
+<meta name="citation_title" content="Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm">
+<meta name="citation_author" content="Franco Cazzaniga">
+<meta name="citation_pdf_url" content="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.pdf">
+<meta name="citation_abstract_html_url" content="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
+<meta name="citation_publisher" content="AI-Theoretical">
 <meta property="og:title" content="Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm — AI-Theoretical">
 <meta property="og:description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction ...">
 <meta property="og:url" content="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://ai-theoretical.org/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@AITheoretical">
+<meta name="twitter:title" content="Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm">
+<meta name="twitter:description" content="We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction ...">
+<meta name="twitter:image" content="https://ai-theoretical.org/og-image.jpg">
 <link rel="canonical" href="https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html">
+<script type="application/ld+json">
+{
+	"@type" : "ScholarlyArticle",
+	"name" : "Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm",
+	"url" : "https://ai-theoretical.org/papers/wave-function-collapse-as-lie.html",
+	"publisher" : {
+		"name" : "AI-Theoretical",
+		"@type" : "Organization",
+		"url" : "https://ai-theoretical.org"
+	},
+	"abstract" : "We propose a geometric mechanism for the emergence of discrete measurement outcomes in the Stern–Gerlach experiment, based on the In¨on¨u–Wigner contraction of Lie algebras.\r\nThe inhomogeneous magnetic field of the apparatus explicitly breaks the internal SU(2) symmetry of the spin degree of freedom, inducing a continuous deformation of the spin algebra toward the Euclidean algebra e(2). This contraction has three consequences: (i) the spherical coadjoint orbits of SU(2) degenerate into the cylindrical orbits of E(2), geometrically encoding the loss of transverse spin structure; (ii) finite-dimensional spin representations can contract only to one-dimensional characters of E(2), providing a representation-theoretic origin for discrete outcomes; (iii) the Husimi distribution of an arbitrary spin state concentrates onto the poles of the sphere, corresponding to the eigenstates of the spin projection\r\nalong the field axis.\r\nWe derive the contraction rate from the physical parameters of the Stern–Gerlach apparatus and show that typical experimental conditions place the system deep in the contracted regime. The framework explains the discreteness of outcomes and the selection of the preferred measurement basis without invoking environmental decoherence or stochastic collapse models. It does not derive the Born rule, and whether it accounts for single-outcome realization depends on interpretive assumptions that are discussed explicitly. The approach suggests that explicit symmetry breaking may play a more general role in quantum measurement than previously recognized.",
+	"encoding" : {
+		"contentUrl" : "https://ai-theoretical.org/papers/wave-function-collapse-as-lie.pdf",
+		"@type" : "MediaObject",
+		"encodingFormat" : "application/pdf"
+	},
+	"genre" : "researchPreprint",
+	"funder" : {
+		"name" : "AI Models: Claude Opus 4.5, Chat Gpt 5.2",
+		"@type" : "Organization"
+	},
+	"headline" : "Wave Function Collapse as Lie Algebra Contraction: The SU(2) Spin-1/2 Paradigm",
+	"author" : [
+		{
+			"name" : "Franco Cazzaniga",
+			"@type" : "Person"
+		}
+	],
+	"@context" : "https://schema.org",
+	"datePublished" : ""
+}</script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>:root { --accent-blue: #2563eb; --text-main: #1a1a1a; --text-muted: #666; --border: #e5e5e0; }* { margin: 0; padding: 0; box-sizing: border-box; }body { font-family: Inter, sans-serif; background: #fff; color: var(--text-main); line-height: 1.7; padding: 40px; }.container { max-width: 800px; margin: 0 auto; }nav { margin-bottom: 40px; }nav a { color: var(--accent-blue); text-decoration: none; font-size: 0.9rem; }h1 { font-family: Playfair Display, serif; font-size: 2.2rem; margin-bottom: 15px; line-height: 1.3; }.meta { color: var(--text-muted); margin-bottom: 25px; font-size: 0.95rem; }.ai-tag { background: var(--accent-blue); color: #fff; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; }.version-tag { background: #e5e5e0; padding: 2px 8px; border-radius: 3px; font-size: 0.8rem; margin-left: 10px; }.btn { display: inline-block; padding: 10px 20px; margin-right: 10px; margin-bottom: 10px; text-decoration: none; border-radius: 4px; font-size: 0.9rem; }.btn-black { background: var(--text-main); color: #fff; }.btn-black:hover { background: var(--accent-blue); }.withdrawn-notice { background: #ffcccc; padding: 20px; margin-bottom: 25px; border-radius: 6px; border-left: 4px solid #c00; }section { margin: 35px 0; padding-top: 25px; border-top: 1px solid var(--border); }section h2 { font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; color: var(--text-muted); margin-bottom: 15px; }section p, section pre { font-size: 0.95rem; }pre { white-space: pre-wrap; font-family: inherit; background: #f9f9f9; padding: 15px; border-radius: 4px; }footer { margin-top: 60px; padding-top: 30px; border-top: 1px solid var(--border); text-align: center; }.powered-by { font-size: 0.85rem; color: var(--text-main); }.powered-by a { color: var(--text-main); text-decoration: none; }.powered-by a:hover { text-decoration: underline; }</style>
 </head>
